Latest updated assignment

--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -1,15 +1,51 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Registration</title>
     <link rel="stylesheet" type="text/css" href="/StyleSheet1.css">
+    <script type ="text/javascript">
+
+        function validationRegistration() {
+
+            var userID = document.registerForm.emailAddress.value;
+            var pinValue = document.registerForm.password.value;
+            var recoveryQ = document.registerForm.recoveryQuestion.value;
+            var recoveryA = document.registerForm.recoveryQuestion.value;
+
+
+            if (userID == null || userID == "") {
+                alert("Please enter username");
+                return false;
+            }
+
+            if (pinValue == null) {
+                alert("Please enter a Pin value");
+                return false;
+            }
+
+            if (recoveryQ == null) {
+                alert("Please enter a Question");
+                return false;
+            }
+
+            if (recoveryA == null) {
+                alert("Please enter a Answer value");
+                return false;
+            }
+            else {
+                alert("User successfully Registered");
+                return true;
+            }
+        }
+    </script>
 </head>
 <body>
 <div class="header">
     <h2>Register</h2>
 </div>
 
-<form method="post" action="register">
+<form name = "registerForm" method="post" action="/register" onsubmit="return validationRegistration()">
     <div class="input-group">
         <label>Email</label>
         <input type="email" name="emailAddress" id="emailAddress">
